Move legacy coverage handling to dedicated endpoint